--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,14 +1,14 @@
 
 ###> symfony/framework-bundle ###
 /.env.local
-/.env
+/.env/
 /.env.local.php
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /var/
 /vendor/
-/migrations
+/migrations/
 ###< symfony/framework-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
