--- a/backend/.env
+++ b/backend/.env
@@ -23,9 +23,9 @@ APP_SECRET=3706d35b225844c2efdc82db1270487d
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
+# DATABASE_URL="mysql://postgres:R14707@127.0.0.1:3306/lastone?serverVersion=5.7&charset=utf8mb4"
 
-DATABASE_URL="postgresql://postgres:admin@127.0.0.1:5432/gp?charset=utf8"
+DATABASE_URL="postgresql://postgres:R14707@127.0.0.1:5432/lastone?charset=utf8"
 
 
 ###< doctrine/doctrine-bundle ###
